--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - MYSQL_PASSWORD=
       - MYSQL_USER=root
       - MYSQL_DATABASE=order_management
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
 #  elasticsearch:
 #    container_name: es-container
 #    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
